@@ -20,6 +20,6 @@ pnee_SOURCES = \
 pnee_LDADD =  -L../../ -L../../libxnee/src @PACKAGE_LIBS@ $(INTLLIBS) $(PANEL_LD_FLAGS) -lxnee -lXtst $(LIBSEMA)   
 
 install-exec-local: $(PNEE)	
-	mkdir -p $(PANEL_APPLET_DIR)
-	cp $(PNEE)  $(PANEL_APPLET_DIR)
+	mkdir -p $(DESTDIR)$(PANEL_APPLET_DIR)
+	cp $(PNEE)  $(DESTDIR)$(PANEL_APPLET_DIR)
 
